force-app/main/default/objects/HRCFSL_Inspection_Template__c/HRCFSL_Inspection_Template__c.object-meta.xml
<CustomObject>
    <label>Inspection Template</label>
    <nameField>
        <label>Inspection Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspection Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>