force-app/main/default/objects/HRCFSL_Inspection_Template__c/fields/HRCFSL_Default__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default Template used when no template is found for Product/Work Type combo.</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>