force-app/main/default/objects/HRCFSL_Inspection_Template__c/fields/HRCFSL_Product__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Product__c</fullName>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>