force-app/main/default/objects/HRCFSL_Inspection_Template__c/fields/HRCFSL_Product_Model__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Product_Model__c</fullName>
    <label>Product Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>