force-app/main/default/objects/HRCFSL_Inspection_Template__c/fields/HRCFSL_Region__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Region__c</fullName>
    <description>Region(s) that this Template applies to</description>
    <label>Region</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
                <label>United States</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Canada</label>
            </value>
            <value>
                <fullName>EU</fullName>
                <label>Europe</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>