force-app/main/default/objects/HRCFSL_Inspection_Template__c/fields/Inspection_Template_Step_Ids__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Template_Step_Ids__c</fullName>
    <label>Inspection Template Step Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>