force-app/main/default/objects/HRCFSL_Inspection_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HRCFSL_Default__c</columns>
    <columns>HRCFSL_Product_Model__c</columns>
    <columns>HRCFSL_Region__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>