force-app/main/default/objects/HRCFSL_Inspection_Template__c/listViews/Canada_Templates.listView-meta.xml
<ListView>
    <fullName>Canada_Templates</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HRCFSL_Region__c</field>
        <operation>includes</operation>
        <value>CA</value>
    </filters>
    <label>Canada Templates</label>
</ListView>